<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Android Sudoku</string>
    <string name="contButton">Continue</string>
    <string name="newButton">New Game</string>
    <string name="aboutButton">About</string>
    <string name="exitButton">Exit</string>
    <string name="title_activity_about">About Sudoku</string>
    <string name="about"><html><h2>About Sudoku</h2> <p>Een sudoku is een puzzel van 9 bij 9 vakjes, waarin een klein aantal cijfers al zijn ingevuld.
            Het is aan jou om de overige vakjes ook in te vullen, waaraan het aan de volgende 3 simpele regels moet voldoen:

             in elke rij moeten de getallen 1 tot en met 9 één keer voorkomen.
           in elke kolom moeten de getallen 1 tot en met 9 één keer voorkomen.
            in elk blok van 3 bij 3 moeten de getallen 1 tot en met 9 één keer voorkomen.</p></html></string>
    <string name="music">Music</string>
    <string name="musicDescr">Play background music</string>
    <string name="hints">Hints</string>
    <string name="hintsDescr">Show hints during play</string>
    <string name="preferences">Preferences</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="keypad_title">KeyPad</string>
    <string name="no_moves_label">No moves</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_key_pad">Keypad</string>

</resources>
